--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,10 +49,14 @@
         <li>
           <div class="alert alert-secondary">
             <%= todo.text %>
-            <a href="#" class="close fa fa-trash" style="color: red"></a>
             <a
-              href="#"
-              class="close fa fa-check-square mrr-2"
+              href="/admin/delete-todo/<%= todo.id  %>"
+              class="close fa fa-trash"
+              style="color: red"
+            ></a>
+            <a
+              href="/admin/completed-todo/<%= todo.id  %>"
+              class="close fa fa-check-square mr-2"
               style="color: green"
             ></a>
           </div>
