--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,13 +33,13 @@
         <p class="d-inline col">
           کارهای انجام شده :
           <span class="badge badge-success badge-pill"
-            >0<!-- CompletedTodos --></span
+            ><%= completedTodos %></span
           >
         </p>
         <p class="d-inline col">
           کارهای باقی مانده امروز :
           <span class="badge badge-warning badge-pill"
-            >0<!-- RemainingTodos --></span
+            ><%= remainingTodos %></span
           >
         </p>
       </div>
